extension/css/content.css
/* Tables */
.aes-table {
    width: auto;
}

.as-table-well:has(.aes-table) {
    width: fit-content;
}

/* Helpers */
.aes-text-right {
    text-align: right;
}

.aes-no-text-wrap {
    white-space: nowrap;
}

/* Specific */
.aes-aircraftProfit-profit {
    text-align: right;
    white-space: nowrap;
}

/**
 * About Modal
 */
#aes-about-dialog .modal-dialog {
    width: 40em;
    max-width: 90vw;
    margin-right: auto;
    margin-left: auto;
}

#aes-about-dialog .modal-body {
    text-align: center;
}

#aes-about-dialog h2 {
    color: inherit;
}

#aes-about-dialog img {
    width: 64px;
    height: 64px;
    border-radius: 5px;
}

#aes-about-dialog button[data-dismiss] {
    position: absolute;
    top: 10px;
    right: 10px;
}

/**
 * General UI improvements
 */

/* Align icons and text in menu items */
.dropdown-menu > li > a:has(.fa) {
    display: grid;
    grid-template-columns: 1em auto;
    gap: .5em;
    align-items: center;
}

.dropdown-menu > li > a > .fa {
    justify-self: center;
}

/* Hide empty aircraft categories */
.as-fieldset:has(.types):not(:has(li)) {
    display: none;
}

[class^="layout-col-md"]:has(.types):not(:has(li)) {
    display: none;
}

/* Dark Mode fixes */
head:has(link[href^="/dist/assets/theme-dark"]) + body .bad {
    color: #ffb8b6;
}

head:has(link[href^="/dist/assets/theme-dark"]) + body .good {
    color: #7cde7c;
}

head:has(link[href^="/dist/assets/theme-dark"]) + body .warning {
    color: #ffbc5d;
}

head:has(link[href^="/dist/assets/theme-dark"]) + body .visual-flight-plan .vfp div.day div.blocks div.block.flight.locked {
    color: #a26900;
}

head:has(link[href^="/dist/assets/theme-dark"]) + body .visual-flight-plan .vfp div.day div.blocks div.block.flight.error {
    color: #cd0000;
}

